📜feat: scss 의 variable 설정 및 reset 으로 스타일 초기화 설정

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,8 @@
-$primary-color: #0070f3;
+@import 'variables';
 
-body {
-color: $primary-color;
+.test {
+  width: 400px;
+  height: 400px;
+
+  @include skeleton;
 }
