📜feat: 메인 화면 및 헤더 구현

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -135,3 +135,6 @@ table {
 }
 /*# sourceMappingURL=/sm/04f4d35563f7cf9516264fcbb6e11a85def2ae5616df66563711867fe05befec.map */
 
+html{
+  font-size: 10px;
+}
