--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,3 +13,11 @@
   font-style: normal;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Pretendard-Regular";
+}
+
+
