--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -135,6 +135,9 @@ table {
 }
 /*# sourceMappingURL=/sm/04f4d35563f7cf9516264fcbb6e11a85def2ae5616df66563711867fe05befec.map */
 
-html{
+html {
   font-size: 10px;
+}
+a {
+  text-decoration: none;
 }
