Revert "메인페이지 스타일 개선"

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -4,10 +4,7 @@
  *
  * Do NOT use SRI with dynamically generated files! More information: https://www.jsdelivr.com/using-sri-with-dynamic-files
  */
-a {
-  text-decoration: none;
-}
-,
+a,
 abbr,
 acronym,
 address,
@@ -138,6 +135,6 @@ table {
 }
 /*# sourceMappingURL=/sm/04f4d35563f7cf9516264fcbb6e11a85def2ae5616df66563711867fe05befec.map */
 
-html {
+html{
   font-size: 10px;
 }
